--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input id="friend-input" placeholder="i.e. Sara" />
             </div>
             <div class="friends">
-
+                placeholder
             </div>    
         </div>
     </main>
